Updatess SecurityConfig.java